--- a/css/style.css
+++ b/css/style.css
@@ -519,7 +519,17 @@ body {
   /* animation: showSecondCover 2s forwards; */
   font-family: 'giftfont3', cursive !important;
   font-size: 10px;
-  color: #636e72;
+  background: hsla(55, 90%, 67%, 1);
+
+background: linear-gradient(90deg, hsla(55, 90%, 67%, 1) 0%, hsla(173, 87%, 59%, 1) 50%, hsla(327, 89%, 71%, 1) 100%);
+
+background: -moz-linear-gradient(90deg, hsla(55, 90%, 67%, 1) 0%, hsla(173, 87%, 59%, 1) 50%, hsla(327, 89%, 71%, 1) 100%);
+
+background: -webkit-linear-gradient(90deg, hsla(55, 90%, 67%, 1) 0%, hsla(173, 87%, 59%, 1) 50%, hsla(327, 89%, 71%, 1) 100%);
+
+filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#F7EA60", endColorstr="#3CF2DE", GradientType=1 );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 @keyframes showSecondCover {
   100%{
@@ -536,7 +546,7 @@ body {
 
 .gift-card .last-wishes #your-last-wishes{
   width: 100%;
-  height: 80%;
+  height: 85%;
   overflow-y: hidden;
   font-family: 'giftfont2', cursive;
   font-size: 18px;
@@ -788,4 +798,32 @@ body {
   transform: rotate(calc(var(--rotate) * -1deg)) scale(var(--success-scale)) translateZ(0);
   opacity: var(--success-opacity);
   color: var(--success);
+}
+.last-cover{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  font-family: "giftfont3", cursive;
+  opacity: 0;
+  z-index: -1;
+  background: #ef32d9;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #89fffd, #ef32d9);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right bottom, #89fffd, #ef32d9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+ -webkit-background-clip: text;
+ color: transparent;
+ line-height: 2;
+ padding: 0 10px;
+}
+@keyframes last-cover {
+  100%{
+    opacity: 1;
+    z-index: 2;
+  }
 }
